# Python-Practice

./: .gitignore  pyproject.toml
DataIngestion/: database.py  docker-compose.yml  ingest_data.py  logging_config.py  models.py
DataIngestion/logs/: 2026-05-01-20-27-05.json  2026-05-01-20-30-08.json  2026-05-01-20-32-30.json  2026-05-01-20-32-49.json  2026-05-01-20-33-35.json  2026-05-01-20-35-47.json  2026-05-01-20-53-42.json  2026-05-01-20-55-30.json  2026-05-01-20-59-45.json  2026-05-01-21-00-07.json  2026-05-01-21-02-32.json  2026-05-01-21-02-34.json  2026-05-01-21-02-35.json  2026-05-04-20-08-16.json  2026-05-04-20-10-35.json  2026-05-04-20-11-18.json  (+4 more)
Databases/: add_review.py  docker-compose.yml  postresql_imp.py
DecoupledIngestion/: ingest_data.py  models.py
Dunder/: context_and_decorator.py  context_manager.py  count_down.py  descriptor.py  metaclasses.py  properties.py  shopping_cart.py  slots.py
Extras/: cqrs.py  dataclasses_practice.py  disassembler.py  exception_class.py  match_case.py  multi_processing.py  retries.py  stream_processing.py  template.py  threadqueue.py  validator.py  walrus.py  zip_func.py
Hypothesis/: mock.py
Logging/: inference.py  logger_config.py
MachineLearning/: cohenkappa.py
Polars/: exploration.ipynb
Prefect/: ingestion.py
Pydantic/: discriminator.py
RateLimiter/: inference.py
StrongTyping/: TypeChecker.py  generics.py  interfaces.py  multiple_types.py  overloading.py  pydantic_exp.py  validation_pydantic.py  variadics.py
Testing/: processor.py  test_processor.py
Visualization/: charting.ipynb  seaborn.ipynb
(+4 files in other folders)
